--- a/quiz-front/src/app/pages/quiz-list.html
+++ b/quiz-front/src/app/pages/quiz-list.html
@@ -5,7 +5,7 @@
     @for (quiz of quizzes(); track quiz.id) {
       <a [routerLink]="['/quiz', quiz.id]" class="quiz-card card">
         <h2 class="quiz-title">{{ quiz.title }}</h2>
-        <p class="quiz-description">Testez vos connaissances sur {{ quiz.title }}.</p>
+        <p class="quiz-description">Testez vos connaissances en {{ quiz.title }}.</p>
         <button class="btn-primary start-btn">Commencer</button>
       </a>
     }
