--- a/quiz-front/src/app/pages/results.html
+++ b/quiz-front/src/app/pages/results.html
@@ -31,7 +31,7 @@
         </p>
       } @else {
         <p class="feedback-message">
-          Aïe ! Vous pouvez mieux faire, continuez à apprendre pour améliorer votre score.
+          Aïe ! Améliorez votre score en relançant le quiz.
         </p>
       }
 
