--- a/quiz-front/src/app/pages/type-selection.scss
+++ b/quiz-front/src/app/pages/type-selection.scss
@@ -163,7 +163,7 @@
   box-shadow: 0 4px 6px rgba(255, 183, 77, 0.4);
 }
 
-.type-loisir {
+.type-loisirs {
   background-color: #BA68C8; /* Violet */
   box-shadow: 0 4px 6px rgba(186, 104, 200, 0.4);
 }
