--- a/quiz-front/src/app/pages/results.html
+++ b/quiz-front/src/app/pages/results.html
@@ -12,9 +12,9 @@
       <div class="score-display">
         <span class="score-label">Score final</span>
 
-        <!-- NOUVEAU WRAPPER POUR ALIGNER SCORE ET TOTAL SUR LA MÊME LIGNE -->
+        <!-- Wrapper pour aligner score et totale sur la même ligne -->
         <div class="score-value-wrapper">
-          <!-- Puisque nous sommes dans le @if, les valeurs sont garanties non-nulles -->
+
           <strong class="final-score">{{ score }}</strong>
           <span class="score-unit"> / 50</span>
         </div>
