--- a/quiz-front/src/app/pages/user-profile.html
+++ b/quiz-front/src/app/pages/user-profile.html
@@ -1,7 +1,7 @@
 <div class="profile-container container">
   <h1 class="page-title">Mon Profil</h1>
 
-  <!-- CONTENEUR DE NOTIFICATION -->
+  <!-- Conteneur de notifications -->
   @if (successMessage || errorMessage) {
     <div
       class="notification"
@@ -42,7 +42,7 @@
           <thead>
           <tr>
             <th>Quiz</th>
-            <!-- Ajout d'une flèche pour indiquer le tri -->
+            <!-- Flèche pour indiquer le tri -->
             <th>Score Obtenu (↓)</th>
           </tr>
           </thead>
